Basic color theme

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-    <div class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <a href="/" class="navbar-brand">{{ .Site.Title }}</a>
@@ -21,4 +21,4 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
