--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,17 +1,17 @@
 {{ partial "header.html" . }}
 {{ partial "navbar.html" . }}
-
-    <div class="container">
-        {{ range .Data.Pages }}
-        <div>
-            <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-            <span class="lead">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
-            <p>{{ .Summary }}</p>
-        </div>
-        {{ end }}
-
-        {{ partial "container-footer.html" . }}
-
+  <div class="container">
+    {{ range .Data.Pages }}
+    <div>
+      <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+      <span class="lead">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+      <div class="post">
+        {{ .Content }}
+      </div>
     </div>
+    {{ end }}
 
+    {{ partial "container-footer.html" . }}
+    {{ partial "pagination.html" . }}
+  </div>
 {{ partial "footer.html" . }}
