--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4629,8 +4629,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   line-height: 1.42857143;
   color: #b7b7b7;
   text-decoration: none;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: #001f39;
+  border: 1px solid #000;
 }
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
@@ -4648,8 +4648,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   color: #db0024;
-  background-color: #eee;
-  border-color: #ddd;
+  background-color: #001f39;
+  border-color: #000;
 }
 .pagination > .active > a,
 .pagination > .active > span,
@@ -4658,10 +4658,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
   z-index: 2;
-  color: #fff;
+  color: #b7b7b7;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #001f39;
+  border-color: #000;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4717,14 +4717,14 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager li > span {
   display: inline-block;
   padding: 5px 14px;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: #001f39;
+  border: 1px solid #000;
   border-radius: 15px;
 }
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: #eee;
+  background-color: #001f39;
 }
 .pager .next > a,
 .pager .next > span {
@@ -4740,7 +4740,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager .disabled > span {
   color: #777;
   cursor: not-allowed;
-  background-color: #fff;
+  background-color: #001f39;
 }
 .label {
   display: inline;
