Nav and copyright

--- a/bootstrap/variables.less
+++ b/bootstrap/variables.less
@@ -372,7 +372,7 @@
 
 // Navbar links
 @navbar-default-link-color:                @navbar-default-color;
-@navbar-default-link-hover-color:          @navbar-default-color;
+@navbar-default-link-hover-color:          darken(@navbar-default-brand-color, 10%);
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         @navbar-default-color;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
