--- a/layouts/partials/container-footer.html
+++ b/layouts/partials/container-footer.html
@@ -1,16 +1,10 @@
       <footer>
         <nav class="navbar navbar-default">
           <div class="container-fluid">
-            <div class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="http://gohugo.io">Hugo</a></li>
-                <li><a href="http://bootswatch.com">Bootswatch</a></li>
-                <li><a href="http://getbootstrap.com">Bootstrap</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li class="pull-right"><a href="#top">Back to top</a></li>
-              </ul>
-            </div>
+            <div class="navbar-text">&copy; 2003-{{ dateFormat "2006" .Site.LastChange}} Joe Beda All Rights Reserved</div>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="pull-right"><a href="#top">Back to top</a></li>
+            </ul>
           </nav>
         </div>
       </footer>
