--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4415,7 +4415,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #db0024;
+  color: #a8001c;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
@@ -4456,7 +4456,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #db0024;
+    color: #a8001c;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
@@ -4476,14 +4476,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #db0024;
 }
 .navbar-default .navbar-link:hover {
-  color: #db0024;
+  color: #a8001c;
 }
 .navbar-default .btn-link {
   color: #db0024;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #db0024;
+  color: #a8001c;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
