--- a/static/css/eightypercent.css
+++ b/static/css/eightypercent.css
@@ -2,15 +2,18 @@
 https://www.google.com/fonts#UsePlace:use/Collection:Economica:700|Lora:400,700,400italic,700italic|Roboto+Mono:400,700,400italic,700italic
 */
 @import url(http://fonts.googleapis.com/css?family=Economica:700|Lora:400,700,400italic,700italic|Roboto+Mono:400,700,400italic,700italic);
-@import url(http://fonts.googleapis.com/css?family=Coda&text=80%25);
+@import url(http://fonts.googleapis.com/css?family=Coda);
 
 body { 
   /* Make room for the fixed navbar */
   padding-top: 70px;
 }
 
-.navbar-brand {
+.navbar {
   font-family: Coda;
+}
+
+.navbar-brand {
   font-size: 24px;
 }
 
@@ -34,6 +37,10 @@ body {
   color: #004885;
   width: 25px;
   font-size: 80%;
-  margin-left: -35px;
   margin-right: 10px;
+}
+@media (min-width: 800px) {
+  .postmark {
+    margin-left: -35px;
+  }
 }
