Fix archive date in lots of posts, add license.

--- a/layouts/partials/container-footer.html
+++ b/layouts/partials/container-footer.html
@@ -1,7 +1,10 @@
       <footer>
         <nav class="navbar navbar-default">
           <div class="container-fluid">
-            <div class="navbar-text">&copy; 2003-{{ dateFormat "2006" .Site.LastChange}} Joe Beda All Rights Reserved</div>
+            <div class="navbar-text">
+              &copy; 2003-{{ dateFormat "2006" .Site.LastChange}} Joe Beda 
+              <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" class="navbar-link">CC by-nc-nd 4.0</a>
+            </div>
             <ul class="nav navbar-nav navbar-right">
               <li class="pull-right"><a href="#top">Back to top</a></li>
             </ul>
