Tweak readmore on index page some more.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,11 +7,12 @@
       <h2>
         <span class="glyphicon glyphicon-remove-sign postmark" aria-hidden="true"></span><a href="{{ .Permalink }}">{{ .Title }}</a>
       </h2>
-      <span class="lead">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
       <div class="readmore">
         <div class="post">
+            <span class="lead">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
             {{ .Content }}
         </div>
+        <a class="readmore-click" class="text-center" href="{{ .Permalink }}"></a>
       </div>
     </div>
     {{ end }}
