Move to relative permalinks in list pages

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
   <div class="container">
     {{ range .Data.Pages }}
     <div>
-      <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+      <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
       <span class="lead">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
       <div class="post">
         {{ .Content }}
