--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,14 +5,14 @@
     {{ range $paginator.Pages }}
     <div>
       <h2>
-        <span class="glyphicon glyphicon-remove-sign postmark" aria-hidden="true"></span><a href="{{ .Permalink }}">{{ .Title }}</a>
+        <span class="glyphicon glyphicon-remove-sign postmark" aria-hidden="true"></span><a href="{{ .RelPermalink }}">{{ .Title }}</a>
       </h2>
       <div class="readmore">
         <div class="post">
             <span class="lead">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
             {{ .Content }}
         </div>
-        <a class="readmore-click" class="text-center" href="{{ .Permalink }}"></a>
+        <a class="readmore-click" class="text-center" href="{{ .RelPermalink }}"></a>
       </div>
     </div>
     {{ end }}
