Container packageing post.

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1152,7 +1152,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #524645;
 }
 .sr-only {
   position: absolute;
