--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1089,8 +1089,8 @@ body {
   font-family: "Lora", Georgia, "Times New Roman", Times, serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #f1f1f1;
-  background-color: #191919;
+  color: #211b1a;
+  background-color: #e7ead2;
 }
 input,
 button,
@@ -1101,12 +1101,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #b7b7b7;
+  color: #4f94e0;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #db0024;
+  color: #4f94e0;
   text-decoration: underline;
 }
 a:focus {
@@ -1138,7 +1138,7 @@ img {
   height: auto;
   padding: 4px;
   line-height: 1.42857143;
-  background-color: #191919;
+  background-color: #e7ead2;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all .2s ease-in-out;
@@ -1339,7 +1339,7 @@ mark,
   text-transform: capitalize;
 }
 .text-muted {
-  color: #dfdfdf;
+  color: #0d0b0a;
 }
 .text-primary {
   color: #337ab7;
@@ -1473,7 +1473,7 @@ blockquote {
   padding: 10px 20px;
   margin: 0 0 20px;
   font-size: 17.5px;
-  border-left: 5px solid #db0024;
+  border-left: 5px solid #4f94e0;
 }
 blockquote p:last-child,
 blockquote ul:last-child,
@@ -1498,7 +1498,7 @@ blockquote.pull-right {
   padding-right: 15px;
   padding-left: 0;
   text-align: right;
-  border-right: 5px solid #db0024;
+  border-right: 5px solid #4f94e0;
   border-left: 0;
 }
 .blockquote-reverse footer:before,
@@ -1531,15 +1531,15 @@ samp {
 code {
   padding: 2px 4px;
   font-size: 90%;
-  color: #fff;
-  background-color: #2b2b2b;
+  color: #352b2a;
+  background-color: #f4f5ea;
   border-radius: 4px;
 }
 kbd {
   padding: 2px 4px;
   font-size: 90%;
-  color: #fff;
-  background-color: #2b2b2b;
+  color: #352b2a;
+  background-color: #f4f5ea;
   border-radius: 3px;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25);
@@ -1557,11 +1557,11 @@ pre {
   margin: 0 0 10px;
   font-size: 13px;
   line-height: 1.42857143;
-  color: #f1f1f1;
+  color: #352b2a;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #001f39;
-  border: 1px solid #b7b7b7;
+  background-color: #f4f5ea;
+  border: 1px solid #4f94e0;
   border-radius: 4px;
 }
 pre code {
@@ -2249,7 +2249,7 @@ table {
 caption {
   padding-top: 8px;
   padding-bottom: 8px;
-  color: #dfdfdf;
+  color: #0d0b0a;
   text-align: left;
 }
 th {
@@ -2287,7 +2287,7 @@ th {
   border-top: 2px solid #ddd;
 }
 .table .table {
-  background-color: #191919;
+  background-color: #e7ead2;
 }
 .table-condensed > thead > tr > th,
 .table-condensed > tbody > tr > th,
@@ -2898,7 +2898,7 @@ select[multiple].form-group-lg .form-control {
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #fff;
+  color: #685552;
 }
 @media (min-width: 768px) {
   .form-inline .form-group {
@@ -3312,7 +3312,7 @@ fieldset[disabled] .btn-danger.active {
 }
 .btn-link {
   font-weight: normal;
-  color: #b7b7b7;
+  color: #4f94e0;
   border-radius: 0;
 }
 .btn-link,
@@ -3332,7 +3332,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #db0024;
+  color: #4f94e0;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3907,7 +3907,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eee;
-  border-color: #b7b7b7;
+  border-color: #4f94e0;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3939,7 +3939,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:focus {
   color: #555;
   cursor: default;
-  background-color: #191919;
+  background-color: #e7ead2;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
 }
@@ -3984,7 +3984,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .nav-tabs.nav-justified > .active > a,
   .nav-tabs.nav-justified > .active > a:hover,
   .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #191919;
+    border-bottom-color: #e7ead2;
   }
 }
 .nav-pills > li {
@@ -4052,7 +4052,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .nav-tabs-justified > .active > a,
   .nav-tabs-justified > .active > a:hover,
   .nav-tabs-justified > .active > a:focus {
-    border-bottom-color: #191919;
+    border-bottom-color: #e7ead2;
   }
 }
 .tab-content > .tab-pane {
@@ -4396,33 +4396,33 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #000;
-  border-color: #000;
+  background-color: #dbeb74;
+  border-color: #d3e757;
 }
 .navbar-default .navbar-brand {
-  color: #db0024;
+  color: #524645;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #a8001c;
+  color: #362e2e;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
-  color: #db0024;
+  color: #524645;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #db0024;
+  color: #524645;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #a8001c;
+  color: #362e2e;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #db0024;
-  background-color: #000;
+  color: #524645;
+  background-color: #d3e757;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -4442,28 +4442,28 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #000;
+  border-color: #d3e757;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  color: #db0024;
-  background-color: #000;
+  color: #524645;
+  background-color: #d3e757;
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #db0024;
+    color: #524645;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #a8001c;
+    color: #362e2e;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #db0024;
-    background-color: #000;
+    color: #524645;
+    background-color: #d3e757;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -4473,17 +4473,17 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default .navbar-link {
-  color: #db0024;
+  color: #524645;
 }
 .navbar-default .navbar-link:hover {
-  color: #a8001c;
+  color: #362e2e;
 }
 .navbar-default .btn-link {
-  color: #db0024;
+  color: #524645;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #a8001c;
+  color: #362e2e;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
@@ -4627,10 +4627,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #b7b7b7;
+  color: #211b1a;
   text-decoration: none;
-  background-color: #001f39;
-  border: 1px solid #000;
+  background-color: #e7ead2;
+  border: 1px solid #d4daaf;
 }
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
@@ -4647,9 +4647,9 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #db0024;
-  background-color: #001f39;
-  border-color: #000;
+  color: #4f94e0;
+  background-color: #e7ead2;
+  border-color: #d4daaf;
 }
 .pagination > .active > a,
 .pagination > .active > span,
@@ -4658,10 +4658,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
   z-index: 2;
-  color: #b7b7b7;
+  color: #211b1a;
   cursor: default;
-  background-color: #001f39;
-  border-color: #000;
+  background-color: #e7ead2;
+  border-color: #d4daaf;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4717,14 +4717,14 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager li > span {
   display: inline-block;
   padding: 5px 14px;
-  background-color: #001f39;
-  border: 1px solid #000;
+  background-color: #e7ead2;
+  border: 1px solid #d4daaf;
   border-radius: 15px;
 }
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: #001f39;
+  background-color: #e7ead2;
 }
 .pager .next > a,
 .pager .next > span {
@@ -4740,7 +4740,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager .disabled > span {
   color: #777;
   cursor: not-allowed;
-  background-color: #001f39;
+  background-color: #e7ead2;
 }
 .label {
   display: inline;
@@ -4843,7 +4843,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #b7b7b7;
+  color: #4f94e0;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -4899,7 +4899,7 @@ a.badge:focus {
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #191919;
+  background-color: #e7ead2;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border .2s ease-in-out;
@@ -4914,11 +4914,11 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #b7b7b7;
+  border-color: #4f94e0;
 }
 .thumbnail .caption {
   padding: 9px;
-  color: #f1f1f1;
+  color: #211b1a;
 }
 .alert {
   padding: 15px;
